crossplane-course/07-aws-networking/manifests/raw-vpc.yaml
# THIS is what makes a subnet "public": a default route to the internet gateway.
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: raw-public-route
spec:
  forProvider:
    region: us-east-1
    routeTableIdRef:
      name: raw-public-rt
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: raw-igw
  providerConfigRef:
    name: default
